Add Datacamp Tutorial Package

--- a/05-summary.Rmd
+++ b/05-summary.Rmd
@@ -1,3 +1,16 @@
 # Final Words
 
 We have finished a nice book.
+
+```{r, include=FALSE}
+tutorial::go_interactive()
+```
+
+By default, `tutorial` will convert all R chunks.
+
+```{r}
+a <- 2
+b <- 3
+
+a + b
+```
