--- a/05-summary.Rmd
+++ b/05-summary.Rmd
@@ -18,3 +18,31 @@ b <- 3
 
 a + b
 ```
+
+## Sec 2
+
+```{r ex="create_a", type="pre-exercise-code"}
+b <- 5
+```
+
+```{r ex="create_a", type="sample-code"}
+# Create a variable a, equal to 5
+
+
+# Print out a
+
+```
+
+```{r ex="create_a", type="solution"}
+# Create a variable a, equal to 5
+a <- 5
+
+# Print out a
+a
+```
+
+```{r ex="create_a", type="sct"}
+test_object("a")
+test_output_contains("a", incorrect_msg = "Make sure to print `a`.")
+success_msg("Great!")
+```
