Add Iteractive R sections

--- a/02-graficos_basicos.Rmd
+++ b/02-graficos_basicos.Rmd
@@ -1,3 +1,5 @@
 # Gráficos Básicos no R {#graph_base}
 
+<script src=https://cdn.datacamp.com/datacamp-light-latest.min.js></script>
+
 Here is a review of existing methods.
