--- a/04-modelo_teoria.Rmd
+++ b/04-modelo_teoria.Rmd
@@ -1,7 +1,11 @@
-# Applications
+# Modelo de Simulação (Conceitos Teóricos) {#model_theo}
+
+<script src=https://cdn.datacamp.com/datacamp-light-latest.min.js></script>
 
 Some _significant_ applications are demonstrated in this chapter.
 
-## Example one
+## Conhecendo o problema
 
-## Example two
+## Coleta de informações
+
+## Abordagens para modelagem
