--- a/01-revisao.Rmd
+++ b/01-revisao.Rmd
@@ -1,5 +1,7 @@
 # Revisão {#revisao}
 
+<script src=https://cdn.datacamp.com/datacamp-light-latest.min.js></script>
+
 You can label chapter and section titles using `{#label}` after them, e.g., we can reference Chapter \@ref(intro). If you do not manually label them, there will be automatic labels anyway, e.g., Chapter \@ref(methods).
 
 Figures and tables with captions will be placed in `figure` and `table` environments, respectively.
